--- a/index.html
+++ b/index.html
@@ -4,15 +4,65 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProStart</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
     <div class="container">
-      <header></header>
+      <nav class="app-navbar">
+        <a href="#"><span class="material-symbols-outlined"> person </span></a>
+        <a href="#"
+          ><span class="material-symbols-outlined"> settings </span></a
+        >
+      </nav>
       <main>
-        <div class="time-weather"></div>
-        <div class="search-bookmarks"></div>
-        <div class="todo"></div>
+        <section class="to-do">
+          <header class="to-do-header">
+            <h3>دست‌نویس</h3>
+            <span class="material-symbols-outlined"> visibility_off </span>
+          </header>
+          <div class="to-do-list-wrapper">
+            <ul class="to-do-list">
+              <li class="to-do-item">
+                <input type="checkbox" name="" id="task-checkbox" />
+                <span for="task-checkbox" class="to-do-title"
+                  >کار شماره اول من.</span
+                >
+                <span class="material-symbols-outlined to-do-delete-icon">
+                  delete
+                </span>
+              </li>
+              <li class="to-do-item">
+                <input type="checkbox" name="" id="task-checkbox" />
+                <span for="task-checkbox" class="to-do-title"
+                  >کار شماره دوم من؟</span
+                >
+                <span class="material-symbols-outlined to-do-delete-icon">
+                  delete
+                </span>
+              </li>
+            </ul>
+          </div>
+          <footer class="to-do-footer">
+            <form class="to-do-input-form">
+              <input
+                type="text"
+                class="to-do-input"
+                placeholder=" نوشتن تک جدید"
+              />
+              <span class="material-symbols-outlined"> add </span>
+            </form>
+          </footer>
+        </section>
+        <section class="search-bookmarks"></section>
+        <section class="time-weather"></section>
       </main>
     </div>
   </body>
