Search and bookmarks section style added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
-    <link
-      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
-      rel="stylesheet"
-    />
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
   <body>
@@ -55,13 +51,89 @@
               <input
                 type="text"
                 class="to-do-input"
-                placeholder=" نوشتن تک جدید"
+                placeholder=" نوشتن تسک جدید"
               />
               <span class="material-symbols-outlined"> add </span>
             </form>
           </footer>
         </section>
-        <section class="search-bookmarks"></section>
+        <section class="search-bookmarks">
+          <div class="search-wrapper">
+            <form class="search-form">
+              <input
+                type="text"
+                class="search-input"
+                placeholder="جستجو در گوگل"
+              />
+            </form>
+            <img
+              src="./assets/images/goolge.png"
+              alt="Google"
+              class="search-logo"
+            />
+            <span class="material-symbols-outlined search-icon"> search </span>
+          </div>
+          <div class="bookmarks-wrapper">
+            <a class="bookmark-item" href="#">
+              <span class="material-symbols-outlined"> apps </span>
+              <p>دم‌دستی</p>
+            </a>
+
+            <a
+              class="bookmark-item"
+              href="https://www.shab.ir/"
+              target="”_blank”"
+            >
+              <img src="./assets/images/shab.ico" alt="shab" />
+              <p>شب</p>
+            </a>
+
+            <a class="bookmark-item" href="https://snapp.ir/" target="”_blank”">
+              <img src="./assets/images/snapp.webp" alt="snapp" />
+              <p>اسنپ</p>
+            </a>
+
+            <a
+              class="bookmark-item"
+              href="https://cafebazaar.ir/app"
+              target="”_blank”"
+            >
+              <img src="./assets/images/bazaar.png" alt="cafebazaar" />
+              <p>بازار</p>
+            </a>
+
+            <a
+              class="bookmark-item"
+              href="https://www.digikala.com/"
+              target="”_blank”"
+            >
+              <img src="./assets/images/digikala.webp" alt="digikala" />
+              <p>دیجی‌کالا</p>
+            </a>
+
+            <a
+              class="bookmark-item"
+              href="https://www.alibaba.ir/"
+              target="”_blank”"
+            >
+              <img src="./assets/images/alibaba.png" alt="alibaba" />
+              <p>علی‌بابا</p>
+            </a>
+
+            <a
+              class="bookmark-item"
+              href="https://www.zoomit.ir/"
+              target="”_blank”"
+            >
+              <img src="./assets/images/zoomit.png" alt="zoomit" />
+              <p>زومیت</p>
+            </a>
+
+            <div class="bookmark-item">
+              <span class="material-symbols-outlined"> add </span>
+            </div>
+          </div>
+        </section>
         <section class="time-weather"></section>
       </main>
     </div>
