minor style changes applied

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
           </div>
           <div class="bookmarks-wrapper">
             <a class="bookmark-item" href="#">
-              <span class="material-symbols-outlined"> apps </span>
+              <span class="material-symbols-outlined bookmark-apps">
+                apps
+              </span>
               <p>دم‌دستی</p>
             </a>
 
@@ -130,7 +132,9 @@
             </a>
 
             <div class="bookmark-item">
-              <span class="material-symbols-outlined"> add </span>
+              <span class="material-symbols-outlined add-new-bookmark">
+                add
+              </span>
             </div>
           </div>
         </section>
