Overall style improved and to-do section JavaScript codes added

--- a/index.html
+++ b/index.html
@@ -27,51 +27,80 @@
           </header>
           <div class="to-do-list-wrapper">
             <ul class="to-do-list">
-              <li class="to-do-item">
-                <input type="checkbox" name="" id="task-checkbox" />
-                <span for="task-checkbox" class="to-do-title"
-                  >کار شماره اول من.</span
-                >
-                <span class="material-symbols-outlined to-do-delete-icon">
-                  delete
-                </span>
-              </li>
-              <li class="to-do-item">
-                <input type="checkbox" name="" id="task-checkbox" />
-                <span for="task-checkbox" class="to-do-title"
-                  >کار شماره دوم من؟</span
-                >
-                <span class="material-symbols-outlined to-do-delete-icon">
-                  delete
-                </span>
-              </li>
+              <!-- <li class="to-do-item">
+                <div class="to-do-box"></div>
+                <span class="to-do-title">کار شماره اول من.</span>
+                <div class="to-do-icon-wrapper">
+                  <span class="material-symbols-outlined to-do-edit-icon"
+                    >edit</span
+                  >
+                  <span class="material-symbols-outlined to-do-delete-icon"
+                    >delete</span
+                  >
+                </div>
+              </li> -->
             </ul>
           </div>
           <footer class="to-do-footer">
-            <form class="to-do-input-form">
+            <form class="to-do-input-form" id="to-do-form">
               <input
                 type="text"
                 class="to-do-input"
                 placeholder=" نوشتن تسک جدید"
               />
-              <span class="material-symbols-outlined"> add </span>
+              <button type="submit" class="add-task-button">
+                <span class="material-symbols-outlined add-task-icon">
+                  add
+                </span>
+              </button>
+              <div class="to-do-alert-wrapper">
+                <span class="material-symbols-outlined to-do-alert-icon">
+                  warning
+                </span>
+                <p class="to-do-alert-text">
+                  لطفا یک عنوان برای تسکتون وارد کنید.
+                </p>
+              </div>
             </form>
           </footer>
         </section>
         <section class="search-bookmarks">
           <div class="search-wrapper">
-            <form class="search-form">
+            <form class="search-form" id="search-input">
               <input
                 type="text"
                 class="search-input"
                 placeholder="جستجو در گوگل"
               />
             </form>
-            <img
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="search-logo"
+              preserveAspectRatio="xMidYMid"
+              viewBox="0 0 256 262"
+            >
+              <path
+                class="google-blue-path"
+                d="M255.878 133.451c0-10.734-.871-18.567-2.756-26.69H130.55v48.448h71.947c-1.45 12.04-9.283 30.172-26.69 42.356l-.244 1.622 38.755 30.023 2.685.268c24.659-22.774 38.875-56.282 38.875-96.027"
+              ></path>
+              <path
+                class="google-green-path"
+                d="M130.55 261.1c35.248 0 64.839-11.605 86.453-31.622l-41.196-31.913c-11.024 7.688-25.82 13.055-45.257 13.055-34.523 0-63.824-22.773-74.269-54.25l-1.531.13-40.298 31.187-.527 1.465C35.393 231.798 79.49 261.1 130.55 261.1"
+              ></path>
+              <path
+                class="google-yellow-path"
+                d="M56.281 156.37c-2.756-8.123-4.351-16.827-4.351-25.82 0-8.994 1.595-17.697 4.206-25.82l-.073-1.73L15.26 71.312l-1.335.635C5.077 89.644 0 109.517 0 130.55s5.077 40.905 13.925 58.602l42.356-32.782"
+              ></path>
+              <path
+                class="google-red-path"
+                d="M130.55 50.479c24.514 0 41.05 10.589 50.479 19.438l36.844-35.974C195.245 12.91 165.798 0 130.55 0 79.49 0 35.393 29.301 13.925 71.947l42.211 32.783c10.59-31.477 39.891-54.251 74.414-54.251"
+              ></path>
+            </svg>
+            <!-- <img
               src="./assets/images/google.svg"
               alt="Google"
               class="search-logo"
-            />
+            /> -->
             <span class="material-symbols-outlined search-icon"> search </span>
           </div>
           <div class="bookmarks-wrapper">
@@ -129,7 +158,7 @@
               target="”_blank”"
             >
               <img src="./assets/images/zoomit.png" alt="zoomit" />
-              <p>زومیت</p>
+              <p>زویمت</p>
             </a>
 
             <div class="bookmark-item">
@@ -186,5 +215,6 @@
         </section>
       </main>
     </div>
+    <script src="./assets/scripts/app.js"></script>
   </body>
 </html>
