Time and weather sections added

--- a/index.html
+++ b/index.html
@@ -30,14 +30,17 @@
               <!-- <li class="to-do-item">
                 <div class="to-do-box"></div>
                 <span class="to-do-title">کار شماره اول من.</span>
-                <div class="to-do-icon-wrapper">
-                  <span class="material-symbols-outlined to-do-edit-icon"
-                    >edit</span
-                  >
-                  <span class="material-symbols-outlined to-do-delete-icon"
-                    >delete</span
-                  >
-                </div>
+                <span class="material-symbols-outlined to-do-delete-icon"
+                  >delete
+                  <div class="to-do-delete-operation">
+                    <span class="material-symbols-outlined task-delete-confirm">
+                      check
+                    </span>
+                    <span class="material-symbols-outlined task-delete-cancel">
+                      close
+                    </span>
+                  </div>
+                </span>
               </li> -->
             </ul>
           </div>
@@ -166,16 +169,40 @@
                 add
               </span>
             </div>
+
+            <div class="bookmark-item">
+              <span class="material-symbols-outlined add-new-bookmark">
+                add
+              </span>
+            </div>
+
+            <div class="bookmark-item">
+              <span class="material-symbols-outlined add-new-bookmark">
+                add
+              </span>
+            </div>
+
+            <div class="bookmark-item">
+              <span class="material-symbols-outlined add-new-bookmark">
+                add
+              </span>
+            </div>
+
+            <div class="bookmark-item">
+              <span class="material-symbols-outlined add-new-bookmark">
+                add
+              </span>
+            </div>
           </div>
         </section>
         <section class="time-weather">
           <div class="time-wrapper">
-            <h2 class="time-digits">22:31</h2>
-            <span class="today-date-farsi">11 آذر</span>
-            <div class="date-other-languages-wrapper">
-              <div class="today-date-arabic">18/رجب/1445</div>
-              <div class="time-vertical-bar"></div>
-              <div class="today-date-christian">2023/Dec/2</div>
+            <!-- <h2 class="time-digits">22:31</h2>
+            <span class="date-shamsi">11 آذر</span>
+            <div class="date-other-calendar-wrapper">
+              <span class="date-hijri">18/رجب/1445</span>
+              <span class="time-vertical-bar"></span>
+              <div class="date-christian">2023/Dec/2</div>
             </div>
             <div class="timer-praying-timetable-wrapper">
               <select name="timer" class="timer">
@@ -184,10 +211,10 @@
               <select name="oghat" class="praying-timetable">
                 <option value="oghat">اوقات شرعی</option>
               </select>
-            </div>
+            </div> -->
           </div>
           <div class="weather-wrapper">
-            <div class="temperature-wrapper">
+            <!-- <div class="temperature-wrapper">
               <h2 class="temperature-digits">12°</h2>
               <div class="temperature-emoji">❄️</div>
             </div>
@@ -210,7 +237,7 @@
             </div>
             <select name="forecast" class="temperature-forecast">
               <option value="forecast">پیش‌بینی</option>
-            </select>
+            </select> -->
           </div>
         </section>
       </main>
