css style enhanced

--- a/index.html
+++ b/index.html
@@ -23,26 +23,12 @@
         <section class="to-do">
           <header class="to-do-header">
             <h1>دست‌نویس</h1>
-            <span class="material-symbols-outlined"> visibility_off </span>
+            <span class="material-symbols-outlined to-do-visibility">
+              visibility_off
+            </span>
           </header>
           <div class="to-do-list-wrapper">
-            <ul class="to-do-list">
-              <!-- <li class="to-do-item">
-                <div class="to-do-box"></div>
-                <span class="to-do-title">کار شماره اول من.</span>
-                <span class="material-symbols-outlined to-do-delete-icon"
-                  >delete
-                  <div class="to-do-delete-operation">
-                    <span class="material-symbols-outlined task-delete-confirm">
-                      check
-                    </span>
-                    <span class="material-symbols-outlined task-delete-cancel">
-                      close
-                    </span>
-                  </div>
-                </span>
-              </li> -->
-            </ul>
+            <ul class="to-do-list"></ul>
           </div>
           <footer class="to-do-footer">
             <form class="to-do-input-form" id="to-do-form">
@@ -161,7 +147,7 @@
               target="”_blank”"
             >
               <img src="./assets/images/zoomit.png" alt="zoomit" />
-              <p>زویمت</p>
+              <p>زومیت</p>
             </a>
 
             <div class="bookmark-item">
@@ -196,49 +182,8 @@
           </div>
         </section>
         <section class="time-weather">
-          <div class="time-wrapper">
-            <!-- <h2 class="time-digits">22:31</h2>
-            <span class="date-shamsi">11 آذر</span>
-            <div class="date-other-calendar-wrapper">
-              <span class="date-hijri">18/رجب/1445</span>
-              <span class="time-vertical-bar"></span>
-              <div class="date-christian">2023/Dec/2</div>
-            </div>
-            <div class="timer-praying-timetable-wrapper">
-              <select name="timer" class="timer">
-                <option value="تایمر">تایمر</option>
-              </select>
-              <select name="oghat" class="praying-timetable">
-                <option value="oghat">اوقات شرعی</option>
-              </select>
-            </div> -->
-          </div>
-          <div class="weather-wrapper">
-            <!-- <div class="temperature-wrapper">
-              <h2 class="temperature-digits">12°</h2>
-              <div class="temperature-emoji">❄️</div>
-            </div>
-            <div class="temperature-description-wrapper">
-              <div class="temperature-description-text">
-                بس ناجوانمردانه سرد
-              </div>
-              <div class="temperature-description-emoji">☕️</div>
-            </div>
-            <div class="temperature-min-max-wrapper">
-              <div class="max-temperature-wrapper">
-                <span class="max-temperature-digits">13°</span>
-                <span class="max-temperature-text">حداکثر</span>
-              </div>
-              <div class="min-max-separator">.</div>
-              <div class="min-temperature-wrapper">
-                <span class="min-temperature-digits">12°</span>
-                <span class="min-temperature-text">حداقل</span>
-              </div>
-            </div>
-            <select name="forecast" class="temperature-forecast">
-              <option value="forecast">پیش‌بینی</option>
-            </select> -->
-          </div>
+          <div class="time-wrapper"></div>
+          <div class="weather-wrapper"></div>
         </section>
       </main>
     </div>
