Javascript codes improved and organised

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <form class="to-do-input-form" id="to-do-form">
               <input
                 type="text"
-                class="to-do-input"
+                id="to-do-input"
                 placeholder=" نوشتن تسک جدید"
               />
               <button type="submit" class="add-task-button">
@@ -187,6 +187,8 @@
         </section>
       </main>
     </div>
-    <script src="./assets/scripts/app.js"></script>
+    <script src="./assets/scripts/todo.js"></script>
+    <script src="./assets/scripts/time.js"></script>
+    <script src="./assets/scripts/weather.js"></script>
   </body>
 </html>
