--- a/index.html
+++ b/index.html
@@ -4,24 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ProStart</title>
+
+    <!--Google icon CDN  -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
     />
+
+    <!-- Favicon -->
     <link rel="icon" href="./assets/images/favicon.webp" />
+
+    <!-- Custom css -->
     <link rel="stylesheet" href="./assets/styles/style.css" />
   </head>
+
   <body>
     <div class="container">
-      <nav class="app-navbar">
-        <a href="#"><span class="material-symbols-outlined"> person </span></a>
-        <a href="#"
+      <!-- Navigation bar -->
+      <nav class="app-navbar d-flex">
+        <a href="#" class="d-flex"
+          ><span class="material-symbols-outlined"> person </span></a
+        >
+        <a href="#" class="d-flex"
           ><span class="material-symbols-outlined"> settings </span></a
         >
       </nav>
+
       <main>
-        <section class="to-do">
-          <header class="to-do-header">
+        <!-- To-do section -->
+        <section class="to-do d-flex">
+          <header class="to-do-header d-flex">
             <h1>دست‌نویس</h1>
             <span class="material-symbols-outlined to-do-visibility">
               visibility_off
@@ -31,18 +43,20 @@
             <ul class="to-do-list"></ul>
           </div>
           <footer class="to-do-footer">
-            <form class="to-do-input-form" id="to-do-form">
+            <form class="to-do-input-form d-flex" id="to-do-form">
               <input
                 type="text"
                 id="to-do-input"
+                class="d-flex"
                 placeholder=" نوشتن تسک جدید"
+                autocomplete="off"
               />
-              <button type="submit" class="add-task-button">
+              <button type="submit" class="add-task-button d-flex">
                 <span class="material-symbols-outlined add-task-icon">
                   add
                 </span>
               </button>
-              <div class="to-do-alert-wrapper">
+              <div class="to-do-alert-wrapper d-flex">
                 <span class="material-symbols-outlined to-do-alert-icon">
                   warning
                 </span>
@@ -53,6 +67,8 @@
             </form>
           </footer>
         </section>
+
+        <!-- Google search section -->
         <section class="search-wrapper">
           <form class="search-form" id="search-input">
             <input
@@ -62,44 +78,23 @@
               placeholder="جستجو در گوگل"
             />
           </form>
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="search-logo"
-            preserveAspectRatio="xMidYMid"
-            viewBox="0 0 256 262"
-          >
-            <path
-              class="google-blue-path"
-              d="M255.878 133.451c0-10.734-.871-18.567-2.756-26.69H130.55v48.448h71.947c-1.45 12.04-9.283 30.172-26.69 42.356l-.244 1.622 38.755 30.023 2.685.268c24.659-22.774 38.875-56.282 38.875-96.027"
-            ></path>
-            <path
-              class="google-green-path"
-              d="M130.55 261.1c35.248 0 64.839-11.605 86.453-31.622l-41.196-31.913c-11.024 7.688-25.82 13.055-45.257 13.055-34.523 0-63.824-22.773-74.269-54.25l-1.531.13-40.298 31.187-.527 1.465C35.393 231.798 79.49 261.1 130.55 261.1"
-            ></path>
-            <path
-              class="google-yellow-path"
-              d="M56.281 156.37c-2.756-8.123-4.351-16.827-4.351-25.82 0-8.994 1.595-17.697 4.206-25.82l-.073-1.73L15.26 71.312l-1.335.635C5.077 89.644 0 109.517 0 130.55s5.077 40.905 13.925 58.602l42.356-32.782"
-            ></path>
-            <path
-              class="google-red-path"
-              d="M130.55 50.479c24.514 0 41.05 10.589 50.479 19.438l36.844-35.974C195.245 12.91 165.798 0 130.55 0 79.49 0 35.393 29.301 13.925 71.947l42.211 32.783c10.59-31.477 39.891-54.251 74.414-54.251"
-            ></path>
-          </svg>
-          <!-- <img
+          <img
             src="./assets/images/google.svg"
             alt="Google"
             class="search-logo"
-          /> -->
+          />
           <span class="material-symbols-outlined search-icon"> search </span>
         </section>
+
+        <!-- Bookmarks section -->
         <section class="bookmarks-wrapper">
-          <a class="bookmark-item" href="#">
+          <a class="bookmark-item d-flex" href="#">
             <span class="material-symbols-outlined bookmark-apps"> apps </span>
             <p>دم‌دستی</p>
           </a>
 
           <a
-            class="bookmark-item"
+            class="bookmark-item d-flex"
             href="https://www.shab.ir/"
             target="”_blank”"
           >
@@ -107,13 +102,17 @@
             <p>شب</p>
           </a>
 
-          <a class="bookmark-item" href="https://snapp.ir/" target="”_blank”">
+          <a
+            class="bookmark-item d-flex"
+            href="https://snapp.ir/"
+            target="”_blank”"
+          >
             <img src="./assets/images/snapp.webp" alt="snapp" />
             <p>اسنپ</p>
           </a>
 
           <a
-            class="bookmark-item"
+            class="bookmark-item d-flex"
             href="https://cafebazaar.ir/app"
             target="”_blank”"
           >
@@ -122,7 +121,7 @@
           </a>
 
           <a
-            class="bookmark-item"
+            class="bookmark-item d-flex"
             href="https://www.digikala.com/"
             target="”_blank”"
           >
@@ -131,7 +130,7 @@
           </a>
 
           <a
-            class="bookmark-item"
+            class="bookmark-item d-flex"
             href="https://www.alibaba.ir/"
             target="”_blank”"
           >
@@ -140,7 +139,7 @@
           </a>
 
           <a
-            class="bookmark-item"
+            class="bookmark-item d-flex"
             href="https://www.zoomit.ir/"
             target="”_blank”"
           >
@@ -148,42 +147,46 @@
             <p>زومیت</p>
           </a>
 
-          <div class="bookmark-item">
+          <div class="bookmark-item d-flex">
             <span class="material-symbols-outlined add-new-bookmark">
               add
             </span>
           </div>
 
-          <div class="bookmark-item">
+          <div class="bookmark-item d-flex">
             <span class="material-symbols-outlined add-new-bookmark">
               add
             </span>
           </div>
 
-          <div class="bookmark-item">
+          <div class="bookmark-item d-flex">
             <span class="material-symbols-outlined add-new-bookmark">
               add
             </span>
           </div>
 
-          <div class="bookmark-item">
+          <div class="bookmark-item d-flex">
             <span class="material-symbols-outlined add-new-bookmark">
               add
             </span>
           </div>
 
-          <div class="bookmark-item">
+          <div class="bookmark-item d-flex">
             <span class="material-symbols-outlined add-new-bookmark">
               add
             </span>
           </div>
         </section>
+
+        <!-- Time and weather section -->
         <section class="time-weather">
-          <div class="time-wrapper"></div>
-          <div class="weather-wrapper"></div>
+          <div class="time-wrapper d-flex"></div>
+          <div class="weather-wrapper d-flex"></div>
         </section>
       </main>
     </div>
+
+    <!-- JavaScript scripts -->
     <script src="./assets/scripts/todo.js"></script>
     <script src="./assets/scripts/time.js"></script>
     <script src="./assets/scripts/weather.js"></script>
