--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
     <!-- Custom css -->
     <link rel="stylesheet" href="./assets/styles/main.css" />
+    <link rel="stylesheet" href="./assets/styles/responsive.css" />
   </head>
 
   <body>
